TS-41945 Refactor Gradle plugin to be compatible with Gradle 9 and configuration cache